--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "latest"
+    "node": "16.x"
   },
   "scripts": {
     "lint": "eslint --fix api --ext .js",
